<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/containerMainToolbarLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Blue"
            app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:subtitleTextColor="@color/white"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:titleTextColor="@color/white"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerCalculator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_width"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerMainToolbarLL"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/padding"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:id="@+id/containerTextOutLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    tools:ignore="MissingConstraints">

                    <EditText
                        android:id="@+id/editTextET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:hint="@string/editTextETHint"
                        android:minHeight="@dimen/minHeight"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSiZeET"></EditText>


                    <TextView
                        android:id="@+id/textVieWTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:hint="@string/textVieWTVHint"
                        android:minHeight="@dimen/minHeight"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSiZeTV"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/containerGridLayoutLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    tools:ignore="MissingConstraints">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:columnCount="4"
                        android:rowCount="7">

                        <Button
                            android:id="@+id/buttonOneBT"
                            android:layout_row="1"
                            android:layout_column="0"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonOneBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonTwoBT"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonTwoBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonThreeBT"
                            android:layout_row="1"
                            android:layout_column="2"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonThreeBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonFourBT"
                            android:layout_row="2"
                            android:layout_column="0"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonFourBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonFiveBT"
                            android:layout_row="2"
                            android:layout_column="1"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonFiveBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonSixBT"
                            android:layout_row="2"
                            android:layout_column="2"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonSixBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonSevenBT"
                            android:layout_row="3"
                            android:layout_column="0"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonSevenBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonEightBT"
                            android:layout_row="3"
                            android:layout_column="1"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonEightBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonNineBT"
                            android:layout_row="3"
                            android:layout_column="2"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonNineBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonDivisionBT"
                            android:layout_row="0"
                            android:layout_column="3"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonDivisionBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonMultiplicationBT"
                            android:layout_row="1"
                            android:layout_column="3"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonMultiplicationBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonMinusBT"
                            android:layout_row="2"
                            android:layout_column="3"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonMinusBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonPlusBT"
                            android:layout_row="3"
                            android:layout_rowSpan="3"
                            android:layout_column="3"
                            android:layout_gravity="fill_vertical"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonPlusBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonZeroBT"
                            android:layout_row="4"
                            android:layout_column="0"
                            android:layout_columnSpan="2"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonZeroBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonEquallyBT"
                            android:layout_row="5"
                            android:layout_column="0"
                            android:layout_columnSpan="3"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonEquallyBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                        <Button
                            android:id="@+id/buttonResetBT"
                            android:layout_columnSpan="4"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/Blue"
                            android:text="@string/buttonResetBT"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSiZeBT"></Button>

                    </GridLayout>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>